--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
   "icon": "https://i.imgur.com/Ntpqy9x.png",
   "icon_background": "#FFFFFF",
   "context_menu": {
-    "target": ["images_project"],
+    "target": ["project"],
     "context_root": "Download as"
   }
 }
