--- a/config.json
+++ b/config.json
@@ -5,18 +5,17 @@
     "export"
   ],
   "description": "Export only labeled items and prepares downloadable tar archive",
-  "docker_image": "supervisely/base-py-sdk:6.1.71",
+  "docker_image": "supervisely/base-py-sdk:6.1.59",
   "main_script": "src/main.py",
   "modal_template": "src/modal.html",
   "modal_template_state": {},
-  "gui_template": "src/gui.html",
   "task_location": "workspace_tasks",
   "isolate": true,
   "headless": true,
   "icon": "https://i.imgur.com/Ntpqy9x.png",
   "icon_background": "#FFFFFF",
   "context_menu": {
-    "target": ["images_project"],
+    "target": ["images_project", "videos_project"],
     "context_root": "Download as"
   }
 }
