--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "export"
   ],
   "description": "Export only labeled items and prepares downloadable tar archive",
-  "docker_image": "supervisely/base-py-sdk:6.1.59",
+  "docker_image": "supervisely/base-py-sdk:6.1.73",
   "main_script": "src/main.py",
   "modal_template": "src/modal.html",
   "modal_template_state": {},
@@ -15,7 +15,7 @@
   "icon": "https://i.imgur.com/Ntpqy9x.png",
   "icon_background": "#FFFFFF",
   "context_menu": {
-    "target": ["images_project", "videos_project"],
+    "target": ["images_project", "videos_project", "point_cloud_project"],
     "context_root": "Download as"
   }
 }
