--- a/debug.env
+++ b/debug.env
@@ -9,6 +9,7 @@ TASK_ID=3750
 context.teamId=9
 context.workspaceId=16
 modal.state.slyProjectId=3004
+modal.state.items=true
 
 SERVER_ADDRESS="put your value here"
 API_TOKEN="put your value here"
