--- a/debug.env
+++ b/debug.env
@@ -4,8 +4,7 @@ DEBUG_APP_DIR="/home/andrew/alex_work/app_data/"
 DEBUG_CACHE_DIR="/home/andrew/alex_work/app_cache"
 LOG_LEVEL="debug"
 
-TASK_ID=3750
-
+context.taskId=4332
 context.teamId=9
 context.workspaceId=16
 modal.state.slyProjectId=3008
