--- a/debug.env
+++ b/debug.env
@@ -4,10 +4,10 @@ DEBUG_APP_DIR="/home/andrew/alex_work/app_data/"
 DEBUG_CACHE_DIR="/home/andrew/alex_work/app_cache"
 LOG_LEVEL="debug"
 
-context.taskId=4332
 context.teamId=9
 context.workspaceId=16
 modal.state.slyProjectId=3008
+modal.state.taskId=4332
 modal.state.items=true
 
 SERVER_ADDRESS="put your value here"
