--- a/debug.env
+++ b/debug.env
@@ -7,7 +7,7 @@ LOG_LEVEL="debug"
 context.teamId=9
 context.workspaceId=16
 modal.state.slyProjectId=3008
-modal.state.taskId=4332
+modal.state.slyTaskId=4332
 modal.state.items=true
 
 SERVER_ADDRESS="put your value here"
