--- a/config.json
+++ b/config.json
@@ -15,7 +15,12 @@
   "icon": "https://i.imgur.com/hnLD4nM.png",
   "icon_background": "#FFFFFF",
   "context_menu": {
-    "target": ["images_project", "videos_project", "point_cloud_project"],
+    "target": [
+      "images_project",
+      "videos_project",
+      "point_cloud_project"
+    ],
     "context_root": "Download as"
-  }
+  },
+  "poster": "https://i.imgur.com/gUEuSc7.png"
 }
