--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
     "export"
   ],
   "description": "Export only labeled items and prepares downloadable tar archive",
-  "docker_image": "supervisely/base-py-sdk:6.1.73",
+  "docker_image": "supervisely/base-py-sdk:6.20.0",
+  "instance_version": "6.4.57",
   "main_script": "src/main.py",
   "modal_template": "src/modal.html",
   "modal_template_state": {},
