--- a/config.json
+++ b/config.json
@@ -26,5 +26,5 @@
     ],
     "context_root": "Download as"
   },
-  "poster": "https://i.imgur.com/gUEuSc7.png"
+  "poster": "https://user-images.githubusercontent.com/48245050/182848469-81045a80-d01d-4314-b4bb-9996a6c4edf0.png"
 }
