--- a/config.json
+++ b/config.json
@@ -8,11 +8,13 @@
         "export"
     ],
     "description": "Export only labeled items and prepares downloadable tar archive",
-    "docker_image": "supervisely/import-export:0.0.5",
-    "instance_version": "6.5.1",
+    "docker_image": "supervisely/import-export:6.73.22",
+    "instance_version": "6.8.73",
     "main_script": "src/main.py",
     "modal_template": "src/modal.html",
-    "modal_template_state": {},
+    "modal_template_state": {
+        "items": "True"
+    },
     "task_location": "workspace_tasks",
     "isolate": true,
     "headless": true,
