--- a/local.env
+++ b/local.env
@@ -1,12 +1,3 @@
-PYTHONUNBUFFERED=1
-
-DEBUG_APP_DIR="debug//app_data/"
-DEBUG_CACHE_DIR="debug/app_cache"
-LOG_LEVEL="debug"
-
-TASK_ID=52548
-
-context.teamId=506
-context.workspaceId=942
-modal.state.slyProjectId=27347
-modal.state.items=true
+TEAM_ID=448
+WORKSPACE_ID=690
+PROJECT_ID=35637
