--- a/config.json
+++ b/config.json
@@ -2,10 +2,15 @@
   "name": "Export only labeled items",
   "type": "app",
   "version": "2.0.0",
-  "categories": ["images", "videos", "pointclouds", "export"],
+  "categories": [
+    "images",
+    "videos",
+    "pointclouds",
+    "export"
+  ],
   "description": "Export only labeled items and prepares downloadable tar archive",
-  "docker_image": "supervisely/import-export:6.73.156",
-  "instance_version": "6.10.0",
+  "docker_image": "supervisely/import-export:6.73.160",
+  "instance_version": "6.11.8",
   "main_script": "src/main.py",
   "modal_template": "src/modal.html",
   "modal_template_state": {
@@ -17,7 +22,11 @@
   "icon": "https://i.imgur.com/hnLD4nM.png",
   "icon_background": "#FFFFFF",
   "context_menu": {
-    "target": ["images_project", "videos_project", "point_cloud_project"],
+    "target": [
+      "images_project",
+      "videos_project",
+      "point_cloud_project"
+    ],
     "context_root": "Download as"
   },
   "poster": "https://user-images.githubusercontent.com/48245050/182848469-81045a80-d01d-4314-b4bb-9996a6c4edf0.png"
