--- a/local.env
+++ b/local.env
@@ -1,3 +1,7 @@
-TEAM_ID=448
-WORKSPACE_ID=690
-PROJECT_ID=35637
+# TEAM_ID=448
+# WORKSPACE_ID=690
+# PROJECT_ID=35637
+
+TEAM_ID = 431
+WORKSPACE_ID = 1019
+PROJECT_ID = 40721
